Fix heading alignment

--- a/london.hackspace.org.uk/css/main.css
+++ b/london.hackspace.org.uk/css/main.css
@@ -62,6 +62,10 @@ th {
     text-align:right;
 }
 
+thead th {
+    text-align: center;
+}
+
 #yui-main {
     min-height: 500px;
 }
